@@ -10,6 +10,7 @@ import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
 import com.planet_ink.coffee_mud.Commands.interfaces.*;
 import com.planet_ink.coffee_mud.Common.interfaces.*;
 import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.Basic.GenDrink;
 import com.planet_ink.coffee_mud.Items.interfaces.*;
 import com.planet_ink.coffee_mud.Libraries.interfaces.*;
 import com.planet_ink.coffee_mud.Locales.interfaces.*;
@@ -917,5 +918,76 @@ public class CommonSkill extends StdAbility
 			helpProficiency(mob, 0);
 
 		return true;
+	}
+	
+	private final static String[] MYCODES={"TICKUP","PCTREMAIN"};
+
+	@Override
+	public String getStat(String code)
+	{
+		if(super.isStat(code))
+			return super.getStat(code);
+		switch(getCodeNum(code))
+		{
+		case 0:
+			return "" + tickUp;
+		case 1:
+		{
+			int tot= tickUp +tickDown;
+			if((tot > 0)
+			&&(affected != null))
+				return CMath.toPct(CMath.div(tickUp, tot));
+			return "";
+		}
+		default:
+			return "";
+		}
+	}
+
+	@Override
+	public void setStat(String code, String val)
+	{
+		if(super.isStat(code))
+			super.setStat(code,  val);
+		else
+		switch(getCodeNum(code))
+		{
+		case 0:
+			tickUp=CMath.s_int(val);
+			break;
+		case 1:
+			break;
+		default:
+			break;
+		}
+	}
+
+	@Override
+	protected int getCodeNum(final String code)
+	{
+		for(int i=0;i<MYCODES.length;i++)
+		{
+			if(code.equalsIgnoreCase(MYCODES[i]))
+				return i;
+		}
+		return -1;
+	}
+
+	private static String[]	codes	= null;
+
+	@Override
+	public String[] getStatCodes()
+	{
+		if(codes!=null)
+			return codes;
+		final String[] MYCODES=CMProps.getStatCodesList(CommonSkill.MYCODES,this);
+		final String[] superCodes=CMParms.toStringArray(super.getStatCodes());
+		codes=new String[superCodes.length+MYCODES.length];
+		int i=0;
+		for(;i<superCodes.length;i++)
+			codes[i]=superCodes[i];
+		for(int x=0;x<MYCODES.length;i++,x++)
+			codes[i]=MYCODES[x];
+		return codes;
 	}
 }
