@@ -1858,6 +1858,7 @@ Valid embedded codes for custom prompts include:\n\r\
 %d :  Display the range to your victim %D :  Display ammo remaining\n\r\
 %B :  Go to a new line                 %z :  Display current area name\n\r\
 %r :  Display name of the room         %R :  Display room number (ADMIN ONLY)\n\r\
+%y :  Display common skill % progress  %Y :  Display common skill time remain\n\r
 \n\r\
 COLORS:\n\r\
 ^^h :  Standard hit point color        ^^m :  Standard mana color\n\r\
