@@ -73,6 +73,7 @@
   71. New Expertises: Adv cooking
   72. Crafting expertise keywords can now be hidden from item name
   73. LongLook at food and drink now gives additional info.
+  74. New PROMPT codes: %y and %Y, for showing common skill progress.
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
